--- a/src/components/Dishes/dishdetail.css
+++ b/src/components/Dishes/dishdetail.css
@@ -1,47 +1,49 @@
 .dishdetail_container{
-    background-color: (180deg, #FFFEFA 0%, #FFE031 0%, #FFFEFA 0.01%, #FCFCFC 100%); 
-    width: 100%;
-    height: 100%;
-  }
+  background-color: (180deg, #FFFEFA 0%, #FFE031 0%, #FFFEFA 0.01%, #FCFCFC 100%); 
+  width: 100%;
+  height: 100%;
+}
 
-  .position_bottom{
-    background-position: 50% -10%;
-  }
+.position_bottom{
+  background-position: 50% -10%;
+}
 
-  .img_container{
-    width: 50%;
-    height: 30%;
-  }
-  
-  .dish_container{
-    display: flex;
-    justify-content: center;
-  }
+.img_container{
+  width: 50%;
+  height: 30%;
+}
 
-  .div_img_container{
-    width: auto;
-    margin-left:20%;
-    margin-right:20%;
-  }
+.dish_container{
+  display: flex;
+  justify-content: center;
+}
 
-  .container_restaurant{
-    display: flex;
-    justify-content: center;
+.div_img_container{
+  width: auto;
+  margin-left:20%;
+  margin-right:20%;
+  border-radius: 10%;
+  align-content: center;
+}
+
+.container_restaurant{
+  display: flex;
+  justify-content: center;
 }
 
 .restaurant_container{
-  width: 80%;
-  height: 100%;
-  display: block;
-  position: center;
+width: 80%;
+height: 100%;
+display: block;
+position: center;
 }
 
 .separador{
-  width:30%;
+width:30%;
 }
 
 .container_restaurant_2{
-    display: flex;
-    justify-content: center;
-    margin-top: 20%;
+  display: flex;
+  justify-content: center;
+  margin-top: 20%;
 }
